--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "restful api",
   "main": "server.js",
   "scripts": {
-    "client-install" : "npm install --prefix clinet",
+    "client-install": "npm install --prefix client",
     "client": "npm start --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "rxjs": "^6.5.3"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
