--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "better-scroll": "^2.0.0-beta.2",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
